apps/jfranconeto-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tt-api
spec:
  selector:
    app: tt-api
  ports:
  - name: tt-api-1
    port: 80
    targetPort: 3000
