apps/jfranconeto-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-tt-api
  namespace: nginx
  labels:
    name: ingress-tt-api
spec:
  ingressClassName: nginx
  loadBalancerIP: 172.24.0.3
  rules:
  - host: tt.api
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: tt-api
            port: 
              number: 80
